--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "backend-design-exercise",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "commonjs",
   "scripts": {
     "test": "mocha"
   },
@@ -18,6 +19,9 @@
     "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
-    "chai-http": "^5.1.1"
+    "chai": "^4.3.7",
+    "chai-http": "^4.3.0",
+    "mocha": "^10.7.3",
+    "supertest": "^7.0.0"
   }
 }
