--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "type": "commonjs",
   "scripts": {
-    "test": "cross-env NODE_ENV=test RATE_LIMIT_MAX=5 mocha"
+    "test": "mocha"
   },
   "keywords": [],
   "author": "",
@@ -22,7 +22,6 @@
   "devDependencies": {
     "chai": "^4.3.7",
     "chai-http": "^4.3.0",
-    "cross-env": "^7.0.3",
     "mocha": "^10.7.3",
     "supertest": "^7.0.0"
   }
