docs: Add in-code documentation and improve code formatting
docs: Add in-code documentation and improve code formatting

- Added concise, clear documentation for controllers, middleware, models, routes, and test suite.
- Documented the purpose, input parameters, and output of functions across the codebase.
- Clarified the role of middleware, including configurations such as JWT handling and rate-limiting.
- Improved code formatting for consistency in spacing, indentation, and comment style.
- Enhanced readability and maintainability by ensuring meaningful comments without altering core logic.

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,27 @@
+# This file provides environment variable examples for configuring the Node.js application.
+# Copy this file as '.env' and replace the placeholder values with actual configurations.
+
+# -------------------------
 # Server Configuration
-PORT=3000
+# -------------------------
 
-# Authentication
-SECRET_KEY=your_secret_key_here
+# The port on which the Express server will run.
+# Default: 3000 if not set.
+PORT = 3000
 
-# Rate Limiting
-RATE_LIMIT_MAX=100
+# -------------------------
+# Authentication Configuration
+# -------------------------
+
+# The secret key used to sign and verify JWT tokens.
+# Replace with a strong, random string in production.
+SECRET_KEY = your_secret_key_here
+
+# -------------------------
+# Rate Limiting Configuration
+# -------------------------
+
+# Maximum number of requests allowed from a single IP address within a defined time window.
+# This is used by the rate limiting middleware to prevent abuse.
+# Default: 100 if not set.
+RATE_LIMIT_MAX = 100
